tests/errors/examples/chained_type_error.vg
<view name="Test">
  <div>{count | numberToString | numberToString}</div>
</view>
